Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -3038,10 +3038,9 @@ msgstr "Yorumları göster"
 
 #: libraries/export/latex.php:62 libraries/export/odt.php:48
 #: libraries/export/sql.php:44
-#, fuzzy
 #| msgid "Available MIME types"
 msgid "Display MIME types"
-msgstr "Mevcut MIME türleri"
+msgstr "MIME türlerini göster"
 
 #: libraries/export/latex.php:139 libraries/export/sql.php:281
 #: libraries/export/xml.php:105 libraries/header_printview.inc.php:56
