--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 20:16+0200\n"
+"PO-Revision-Date: 2010-08-22 20:17+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3116,10 +3116,11 @@ msgstr ""
 "gibi bilgileri dahil et)</i>"
 
 #: libraries/export/sql.php:35
-#, fuzzy
 #| msgid "Add custom comment into header (\\n splits lines)"
 msgid "Additional custom header comment (\\n splits lines):"
-msgstr "Başlık içine özel yorum ekle (\\n satırları böler)"
+msgstr ""
+"İlave özel başlık yorumu (\n"
+" satırları böler):"
 
 #: libraries/export/sql.php:37
 msgid ""
