Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -3147,10 +3147,10 @@ msgstr ""
 
 #: libraries/export/sql.php:72 libraries/export/sql.php:105
 #: libraries/export/sql.php:107
-#, fuzzy, php-format
+#, php-format
 #| msgid "Statements"
 msgid "Add %s statement"
-msgstr "İfadeler"
+msgstr "%s ifadesi ekle"
 
 #: libraries/export/sql.php:91
 #, fuzzy
