--- a/po/tr.po
+++ b/po/tr.po
@@ -3313,10 +3313,9 @@ msgid "Tables"
 msgstr "Tablolar"
 
 #: libraries/export/xml.php:40
-#, fuzzy
 #| msgid "View"
 msgid "Views"
-msgstr "Görünüm"
+msgstr "Görünümler"
 
 #: libraries/export/xml.php:47
 msgid "Export contents"
