--- a/po/tr.po
+++ b/po/tr.po
@@ -3407,10 +3407,9 @@ msgstr ""
 "bölünmeli ve tırnaklarla kapanmamalıdır."
 
 #: libraries/import/csv.php:41
-#, fuzzy
 #| msgid "Column names"
 msgid "Column names: "
-msgstr "Sütun adları"
+msgstr "Sütun adları: "
 
 #: libraries/import/csv.php:60 libraries/import/csv.php:72
 #: libraries/import/csv.php:76 libraries/import/csv.php:80
