--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 20:19+0200\n"
+"PO-Revision-Date: 2010-08-22 20:20+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3497,10 +3497,9 @@ msgid "SQL compatibility mode:"
 msgstr "SQL uyumluluk kipi:"
 
 #: libraries/import/sql.php:42
-#, fuzzy
 #| msgid "Do not use AUTO_INCREMENT for zero values"
 msgid "Do not use <code>AUTO_INCREMENT</code> for zero values"
-msgstr "Sıfır değerleri için AUTO_INCREMENT değeri kullanma"
+msgstr "Sıfır değerleri için <code>AUTO_INCREMENT</code> değeri kullanma"
 
 #: libraries/import/xml.php:74 libraries/import/xml.php:130
 msgid ""
