--- a/po/tr.po
+++ b/po/tr.po
@@ -3753,10 +3753,9 @@ msgid "Query window"
 msgstr "Sorgu penceresi"
 
 #: libraries/plugin_interface.lib.php:336
-#, fuzzy
 #| msgid "This format has no options"
 msgid "This format has no options"
-msgstr "Bu biçimin seçenekleri yok"
+msgstr "Bu biçim seçeneğe sahip değil"
 
 #: libraries/relation.lib.php:77
 msgid "not OK"
