Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 20:21+0200\n"
+"PO-Revision-Date: 2010-08-22 20:22+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4232,7 +4232,6 @@ msgid "You have to add at least one column."
 msgstr "En az bir sütun eklemek zorundasınız."
 
 #: libraries/tbl_properties.inc.php:799
-#, fuzzy
 #| msgid ""
 #| "Please enter the values for transformation options using this format: "
 #| "'a', 100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a "
@@ -4243,10 +4242,9 @@ msgid ""
 "(\"\\\") or a single quote (\"'\") amongst those values, precede it with a "
 "backslash (for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Lütfen dönüşüm seçenekleri için değerleri bu biçimi kullanarak giriniz: 'a', "
-"100, b,'c'...<br />Eğer bu değerler arasına hep ters eğik çizgi (\"\\\") "
-"veya tek tırnak (\"'\") koymanız gerekirse, önlerine ters eğik çizgi koyun "
-"(örneğin '\\\\xyz' veya 'a\\'b')."
+"Her bir değeri ayrı alana girin. Eğer bu değerler arasına hep ters eğik "
+"çizgi (\"\\\") veya tek tırnak (\"'\") koymanız gerekirse, önlerine ters eğik "
+"çizgi koyun (örneğin '\\\\xyz' veya 'a\\'b')."
 
 #: libraries/tbl_triggers.lib.php:28
 msgid "Event"
