--- a/po/tr.po
+++ b/po/tr.po
@@ -8739,7 +8739,7 @@ msgstr "SQL dökümü (dosya indirme)"
 
 #: tbl_tracking.php:502
 msgid "SQL dump"
-msgstr "SQL yığını"
+msgstr "SQL dökümü"
 
 #: tbl_tracking.php:503
 msgid "This option will replace your table and contained data."
